[package]
name = "fantasy-world"
version = "0.1.0"
edition = "2021"

[dependencies.ash]
version = "0.37.3+1.3.251"
features = [
    "debug",
    "loaded"
]

[dependencies.windows]
version = "0.51.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader"
]
